--- a/CoasterPayroll/View/Main.xaml
+++ b/CoasterPayroll/View/Main.xaml
@@ -101,20 +101,35 @@
             <GroupBox Header="Payment Details" 
                       Padding="20">
                 <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <WrapPanel Grid.Row="0">
+                        <Button Content="Save" 
+                                Margin="0,0,10,0" Padding="10,0,10,0" 
+                                Command="{Binding SavePayslipCommand}"/>
+                        <Button Content="Save All" 
+                                Margin="0,0,40,0" Padding="10,0,10,0"
+                                Command="{Binding SaveAllPayslipsCommand}"/>
+                    </WrapPanel>
+
+
                     <DataGrid Grid.Row="1" ItemsSource="{Binding DisplayedPaySlips}"
                               AutoGenerateColumns="False"
                               IsReadOnly="True"
                               CanUserAddRows="False"
-                              SelectionMode="Single">
+                              SelectionMode="Single"
+                              SelectedItem="{Binding SelectedPaySlip}">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="ID"
-                                                IsReadOnly="True"
                                                 Binding="{Binding Employee.EmployeeID}"/>
                             <DataGridTextColumn Header="Date Submitted"
                                                 Binding="{Binding SubmittedDate}"/>
-                            <DataGridTextColumn Header="Hr Rate"
+                            <DataGridTextColumn Header="$/Hr"
                                                 Binding="{Binding HourlyRate}"/>
-                            <DataGridTextColumn Header="Week Hours"
+                            <DataGridTextColumn Header="Hrs/Wk"
                                                 Binding="{Binding WeekHours}"/>
                             <DataGridTextColumn Header="Gross Pay"
                                                 Binding="{Binding PayGrossCalculated}"/>
